# koreader-obsidian-plugin

./: .gitignore  AGENTS.md
converter/: README.md  md2kindle.toml.example  pyproject.toml
converter/md2kindle/: __main__.py  cli.py  config.py  images.py  layout.py  manifest.py  pipeline.py  preprocess.py  renderer.py  resolver.py
converter/tests/: conftest.py  test_cli.py  test_config.py  test_images.py  test_layout.py  test_manifest.py  test_pipeline.py  test_preprocess.py  test_renderer.py  test_resolver.py
docs/: design.md  glossary.md  phase-1-notes.md  reference-prompt.md
docs/plans/: 2026-07-13-md2kindle-converter.md  2026-07-13-obsidian-koplugin.md
plugin/: README.md
plugin/obsidian.koplugin/: _meta.lua  linkhandler.lua  main.lua  vaultbrowser.lua
sample-vault/: High Agency in 30 Minutes.md  Home.html  P - June 2026.md  README.txt  fold-test.html
sample-vault/Notes/: Idea.html
sample-vault/Notes/Projects/: Plan.html
