[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "md2kindle"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5",
    "Pillow>=10.0",
    "httpx>=0.25",
    'tomli>=2.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
md2kindle = "md2kindle.cli:main"

[tool.setuptools.packages.find]
include = ["md2kindle*"]
